fixed alignment

--- a/style.css
+++ b/style.css
@@ -64,6 +64,16 @@ header a:hover{
  text-align: center;
 }
 
+.choices{
+ width: 50%;
+ display: inline-block;
+}
+
+.conclusion{
+ width: 49%;
+ display: inline-block;
+}
+
 .user-choices, .comp-choices{
  text-align: left;
  margin: 20px 150px;
@@ -135,12 +145,14 @@ header a:hover{
 
 .winner, .loser{
  display: none;
- margin-left: 35%;
+ /* margin-left: 35%; */
+ text-align: center;
  padding: 10px;
 }
 
 .tie{
  display: none;
- margin-left: 40%;
+ /* margin-left: 40%; */
+ text-align: center;
  padding: 15px 0 10px;
 }
